# xsd2json

./: README.md  pyproject.toml
fixtures/: car.xsd  inheritance.xsd  simple.xsd
output/: README.md  schema.json
output/types/: example-type.json
src/xsd2json/: __init__.py  cli.py  config.py  converter.py  logger.py  parser.py  schema_model.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_converter.py  test_logger.py  test_parser.py  test_schema_model.py
