[project]
name = "xsd2json"
version = "0.1.0"
description = "Robust XSD to JSON Schema converter with LLM optimization features"
readme = "README.md"
authors = [
    { name = "Owen McCusker", email = "mccuskerowen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "lxml>=5.0.0",
    "xmlschema>=3.0.0",
    "jsonschema>=4.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
]

[project.scripts]
xsd2json = "xsd2json.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]
